--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Web Company by Eazy</title>
+    <title> Web Company by Eazy</title>
     <!-- Bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
@@ -343,7 +343,47 @@
     <!--Footer-->
 
     <!-- Modal -->
-    
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="exampleModalLabel">Projects</h1>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="pict/fahrul.png" class="d-block w-100"  style="height: 250px" alt="...">
+                    <p class="mdl">Web Application</p>
+                    <p class="mdbody">By : Fahrul Shalahudin</p>
+                </div>
+                <div class="carousel-item">
+                  <img src="pict/covidtr.png" class="d-block w-100" style="height: 250px" alt="...">
+                  <p class="mdl">Website using Fetch API</p>
+                </div>
+                <div class="carousel-item">
+                  <img src="pict/webprofile.png" class="d-block w-100" style="height: 250px" alt="...">
+                  <p class="mdl">Profile Website</p>
+                </div>
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-modal" data-bs-dismiss="modal">Close</button>
+          
+          </div>
+        </div>
+      </div>
+    </div>
    
     <!-- Modal -->
 
